# FridayChain-Arena

./: .env.example  .gitignore  Cargo.toml  README.md  SUMMARY.md  solve_tournament4.py  vercel.json  verify_original.py  verify_puzzle.py
contracts/fridaychain-arena/: Cargo.toml
contracts/fridaychain-arena/src/: contract.rs  contract.rs.bak  lib.rs  service.rs  state.rs  sudoku.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/api/: linera-rpc.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ArenaLogo.tsx  AudioPlayer.tsx  CountdownTimer.tsx  HowToPlay.tsx  Layout.tsx  LeaderboardTable.tsx  Navbar.tsx  SudokuGrid.tsx
frontend/src/hooks/: useArena.tsx  useLeaderboard.ts  useSuspiciousMoveDetector.ts  useTournament.ts
frontend/src/lib/arena/: arenaApi.ts  queries.ts  types.ts
frontend/src/lib/linera/: lineraClient.ts
frontend/src/lib/metamask/: metamaskSigner.ts
frontend/src/pages/: GamePlayPage.tsx  HomePage.tsx  LeaderboardPage.tsx  ProfilePage.tsx
scripts/: build.sh  deploy.sh  tournament.sh
